Install dependencies on cicd

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -43,10 +43,12 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v1
+      - name: Install dependencies
+        run: npm install
       - name: Build with Hugo
         run: |
           hugo \
-            --minify \
+            --minify --gc --minify \
             --baseURL ${{ steps.pages.outputs.base_url }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
