Enabled NativeBinding plugin

--- a/Apps/CLI/CMakeLists.txt
+++ b/Apps/CLI/CMakeLists.txt
@@ -11,6 +11,7 @@ set_target_properties (RiftCLIExe PROPERTIES FOLDER Rift/Executables)
 target_link_libraries(RiftCLIExe PUBLIC
     rift::Rift
     rift::Backend::LLVM
+    rift::Bindings::Native
     rift::View::Graph
     CLI11
 )
