Refactored rift scope, added clang exported libraries

--- a/Libs/Framework/CMakeLists.txt
+++ b/Libs/Framework/CMakeLists.txt
@@ -12,6 +12,7 @@ pipe_target_shared_output_directory(Rift)
 target_link_libraries(Rift PUBLIC
     Pipe
     Taskflow
+    rift::Bindings::Native
 )
 
 install(TARGETS Rift
