--- a/Libs/Views/Graph/CMakeLists.txt
+++ b/Libs/Views/Graph/CMakeLists.txt
@@ -1,17 +1,15 @@
 
-file(GLOB_RECURSE VIEW_NODES_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
-
 add_library(RiftViewGraph STATIC)
 add_library(rift::View::Graph ALIAS RiftViewGraph)
+
 target_include_directories(RiftViewGraph PUBLIC Include)
+file(GLOB_RECURSE VIEW_NODES_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
 target_sources(RiftViewGraph PRIVATE ${VIEW_NODES_SOURCE_FILES})
-pipe_target_enable_CPP20(RiftViewGraph)
+
+target_link_libraries(RiftViewGraph PUBLIC rift::Rift)
+
+rift_module(RiftViewGraph)
 set_target_properties (RiftViewGraph PROPERTIES FOLDER Rift)
-pipe_target_define_platform(RiftViewGraph)
-pipe_target_shared_output_directory(RiftViewGraph)
-target_link_libraries(RiftViewGraph PUBLIC
-    rift::Rift
-)
 
 install(TARGETS RiftViewGraph
     EXPORT RiftTargets
