--- a/Libs/Bindings/Native/CMakeLists.txt
+++ b/Libs/Bindings/Native/CMakeLists.txt
@@ -1,17 +1,16 @@
 
-file(GLOB_RECURSE BACKEND_CPP_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
-
 add_library(RiftBindingNative STATIC)
 add_library(rift::Bindings::Native ALIAS RiftBindingNative)
+
 target_include_directories(RiftBindingNative PUBLIC Include)
+file(GLOB_RECURSE BACKEND_CPP_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
 target_sources(RiftBindingNative PRIVATE ${BACKEND_CPP_SOURCE_FILES})
-pipe_target_enable_CPP20(RiftBindingNative)
-set_target_properties (RiftBindingNative PROPERTIES FOLDER Rift)
-pipe_target_define_platform(RiftBindingNative)
-pipe_target_shared_output_directory(RiftBindingNative)
 
 target_link_libraries(RiftBindingNative PUBLIC rift::Rift)
 target_link_libraries(RiftBindingNative PRIVATE RiftClang)
+
+rift_module(RiftBindingNative)
+set_target_properties (RiftBindingNative PROPERTIES FOLDER Rift)
 
 install(TARGETS RiftBindingNative
     EXPORT RiftTargets
