--- a/Libs/Bindings/Native/CMakeLists.txt
+++ b/Libs/Bindings/Native/CMakeLists.txt
@@ -1,16 +1,11 @@
 
 add_library(RiftBindingNative STATIC)
-add_library(rift::Bindings::Native ALIAS RiftBindingNative)
 
-target_include_directories(RiftBindingNative PUBLIC Include)
-file(GLOB_RECURSE BACKEND_CPP_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
-target_sources(RiftBindingNative PRIVATE ${BACKEND_CPP_SOURCE_FILES})
 
-target_link_libraries(RiftBindingNative PUBLIC rift::Rift)
+target_link_libraries(RiftBindingNative PUBLIC Rift)
 target_link_libraries(RiftBindingNative PRIVATE RiftClang)
 
-rift_module(RiftBindingNative)
-set_target_properties (RiftBindingNative PROPERTIES FOLDER Rift)
+rift_runtime_module(RiftBindingNative)
 
 install(TARGETS RiftBindingNative
     EXPORT RiftTargets
@@ -19,3 +14,7 @@ install(TARGETS RiftBindingNative
     RUNTIME DESTINATION Bin
     INCLUDES DESTINATION Include
 )
+
+add_library(RiftBindingNativeEditor STATIC)
+rift_editor_module(RiftBindingNativeEditor)
+target_link_libraries(RiftBindingNativeEditor PUBLIC RiftEditor RiftBindingNative)
