--- a/Libs/Views/Graph/CMakeLists.txt
+++ b/Libs/Views/Graph/CMakeLists.txt
@@ -1,15 +1,7 @@
 
 add_library(RiftViewGraph STATIC)
-add_library(rift::View::Graph ALIAS RiftViewGraph)
-
-target_include_directories(RiftViewGraph PUBLIC Include)
-file(GLOB_RECURSE VIEW_NODES_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
-target_sources(RiftViewGraph PRIVATE ${VIEW_NODES_SOURCE_FILES})
-
-target_link_libraries(RiftViewGraph PUBLIC rift::Rift)
-
-rift_module(RiftViewGraph)
-set_target_properties (RiftViewGraph PROPERTIES FOLDER Rift)
+rift_runtime_module(RiftViewGraph)
+target_link_libraries(RiftViewGraph PUBLIC Rift)
 
 install(TARGETS RiftViewGraph
     EXPORT RiftTargets
@@ -18,3 +10,7 @@ install(TARGETS RiftViewGraph
     RUNTIME DESTINATION Bin
     INCLUDES DESTINATION Include
 )
+
+add_library(RiftViewGraphEditor STATIC)
+rift_editor_module(RiftViewGraphEditor)
+target_link_libraries(RiftViewGraphEditor PUBLIC RiftEditor RiftViewGraph)
