--- a/Libs/Backends/LLVM/CMakeLists.txt
+++ b/Libs/Backends/LLVM/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_library(RiftBackendLLVM STATIC)
-rift_runtime_module(RiftBackendLLVM)
+rift_compiler_module(RiftBackendLLVM)
+rift_enable_module_resources(RiftBackendLLVM)
 
 target_link_libraries(RiftBackendLLVM PUBLIC Rift)
 target_link_libraries(RiftBackendLLVM PRIVATE
