--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ Extern/rift-llvm
 .vscode/c_cpp_properties.json
 /compile_commands.json
 compile_commands.json
-Programs/remedybg.exe
+Tools/remedybg.exe
 *.rdbg
