--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -3,6 +3,7 @@
 file(GLOB_RECURSE TESTS_SOURCE_FILES CONFIGURE_DEPENDS *.cpp *.h)
 add_executable(RiftTests ${TESTS_SOURCE_FILES})
 rift_module(RiftTests)
+pipe_target_shared_output_directory(RiftTests)
 target_include_directories(RiftTests PUBLIC .)
 target_link_libraries(RiftTests PUBLIC Rift Bandit)
 
