--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
             "name": "Test Pipe",
             "type": "lldb",
             "request": "launch",
-            "program": "${workspaceFolder}/Build/Bin/Tests/PipeTests.exe",
+            "program": "${workspaceFolder}/Build/Bin/PipeTests.exe",
             "args": [
                 "--reporter=spec"
             ],
@@ -33,7 +33,7 @@
             "name": "Test Rift",
             "type": "lldb",
             "request": "launch",
-            "program": "${workspaceFolder}/Build/Bin/Tests/RiftTests.exe",
+            "program": "${workspaceFolder}/Build/Bin/RiftTests.exe",
             "args": [
                 "--reporter=spec"
             ],
