--- a/Libs/Backends/LLVM/CMakeLists.txt
+++ b/Libs/Backends/LLVM/CMakeLists.txt
@@ -8,10 +8,9 @@ target_link_libraries(RiftBackendLLVM PRIVATE
     RiftLLVM
     RiftBindingNative
 )
-target_compile_definitions(RiftBackendLLVM PRIVATE RIFT_LLVM_LINKER="${RIFT_LLVM_LINKER}" RIFT_LLVM_LINKER_PATH="${RIFT_LLVM_LINKER_PATH}")
 
 
-# Copy LLVM linker
+# LLVM linker
 if (PLATFORM_WINDOWS)
     set(RIFT_LLVM_LINKER lld-link.exe)
 elseif(PLATFORM_LINUX)
@@ -20,10 +19,14 @@ elseif(PLATFORM_MACOS)
     set(RIFT_LLVM_LINKER ld64.lld)
 endif()
 
-file(REMOVE_RECURSE ${CMAKE_CURRENT_BINARY_DIR}/Bin/LLVM)
-file(COPY ${RIFT_LLVM_BIN_PATH}/bin/${RIFT_LLVM_LINKER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Bin/LLVM)
 set(RIFT_LLVM_LINKER_PATH LLVM/${RIFT_LLVM_LINKER})
 
+target_compile_definitions(RiftBackendLLVM PRIVATE RIFT_LLVM_LINKER="${RIFT_LLVM_LINKER}" RIFT_LLVM_LINKER_PATH="${RIFT_LLVM_LINKER_PATH}")
+
 add_custom_command(TARGET RiftBackendLLVM POST_BUILD COMMAND
-    ${CMAKE_COMMAND} -E copy "${RIFT_LLVM_BIN_PATH}/bin/${RIFT_LLVM_LINKER}" "${CMAKE_CURRENT_BINARY_DIR}/Bin/LLVM/${RIFT_LLVM_LINKER}"
+    ${CMAKE_COMMAND} -E remove_directory "${CMAKE_BINARY_DIR}/Bin/LLVM"
 )
+add_custom_command(TARGET RiftBackendLLVM POST_BUILD COMMAND
+    ${CMAKE_COMMAND} -E copy "${RIFT_LLVM_BIN_PATH}/bin/${RIFT_LLVM_LINKER}" "${CMAKE_BINARY_DIR}/Bin/LLVM/${RIFT_LLVM_LINKER}"
+)
+
