Disabled mir executables compilation

--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -46,6 +46,38 @@ add_subdirectory(taskflow)
 pipe_target_disable_all_warnings(Taskflow INTERFACE)
 
 
-add_subdirectory(mir)
+# MIR
+include(FindThreads)
+if(Threads_FOUND)
+  link_libraries(${CMAKE_THREAD_LIBS_INIT})
+endif()
+add_library(mir OBJECT mir/mir.c mir/mir-gen.c mir/c2mir/c2mir.c mir/mir.h mir/mir-gen.h mir/c2mir/c2mir.h)
+target_include_directories(mir PUBLIC mir)
+if(Threads_FOUND)
+  target_compile_definitions(mir PUBLIC "MIR_PARALLEL_GEN")
+endif()
+if(NOT WIN32)
+  target_compile_options(mir
+    $<$<CONFIG:RELEASE>:-O3>
+    $<$<CONFIG:RelWithDebInfo>:-O3>
+  )
+  target_compile_options(mir -std=gnu11 -Wno-abi -fsigned-char -fPIC)
+endif()
+
+include(CheckCCompilerFlag)
+if(CMAKE_COMPILER_IS_GNUCC)
+  check_c_compiler_flag(-fno-tree-sra NO_TREE_SRA)
+  if (NO_TREE_SRA)
+    target_compile_options(mir -fno-tree-sra)
+  endif()
+  check_c_compiler_flag(-fno-ipa-cp-clone NO_IPA_CP_CLONE)
+  if (NO_IPA_CP_CLONE)
+    target_compile_options(mir -fno-ipa-cp-clone)
+  endif()
+endif()
+
+# ------------------ LIBMIR -----------------------
+add_library(mir_static STATIC)
+target_link_libraries(mir_static PRIVATE mir)
 target_include_directories(mir_static PUBLIC mir)
 
