--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -57,22 +57,22 @@ if(Threads_FOUND)
   target_compile_definitions(mir PUBLIC "MIR_PARALLEL_GEN")
 endif()
 if(NOT WIN32)
-  target_compile_options(mir
+  target_compile_options(mir PRIVATE
     $<$<CONFIG:RELEASE>:-O3>
     $<$<CONFIG:RelWithDebInfo>:-O3>
   )
-  target_compile_options(mir -std=gnu11 -Wno-abi -fsigned-char -fPIC)
+  target_compile_options(mir PRIVATE -std=gnu11 -Wno-abi -fsigned-char -fPIC)
 endif()
 
 include(CheckCCompilerFlag)
 if(CMAKE_COMPILER_IS_GNUCC)
   check_c_compiler_flag(-fno-tree-sra NO_TREE_SRA)
   if (NO_TREE_SRA)
-    target_compile_options(mir -fno-tree-sra)
+    target_compile_options(mir PRIVATE -fno-tree-sra)
   endif()
   check_c_compiler_flag(-fno-ipa-cp-clone NO_IPA_CP_CLONE)
   if (NO_IPA_CP_CLONE)
-    target_compile_options(mir -fno-ipa-cp-clone)
+    target_compile_options(mir PRIVATE -fno-ipa-cp-clone)
   endif()
 endif()
 
