--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -56,7 +56,8 @@ include(FindThreads)
 if(Threads_FOUND)
   link_libraries(${CMAKE_THREAD_LIBS_INIT})
 endif()
-add_library(mir OBJECT mir/mir.c mir/mir-gen.c mir/c2mir/c2mir.c mir/mir.h mir/mir-gen.h mir/c2mir/c2mir.h)
+add_library(mir STATIC)
+target_sources(mir PRIVATE mir/mir.c mir/mir-gen.c mir/c2mir/c2mir.c)
 target_include_directories(mir PUBLIC mir)
 if(Threads_FOUND)
   target_compile_definitions(mir PUBLIC "MIR_PARALLEL_GEN")
@@ -80,8 +81,3 @@ if(CMAKE_COMPILER_IS_GNUCC)
     target_compile_options(mir PRIVATE -fno-ipa-cp-clone)
   endif()
 endif()
-
-# ------------------ LIBMIR -----------------------
-add_library(mir_static STATIC)
-target_link_libraries(mir_static PRIVATE mir)
-target_include_directories(mir_static PUBLIC mir)
