--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -52,16 +52,16 @@ pipe_target_disable_all_warnings(Taskflow INTERFACE)
 
 
 # MIR
-include(FindThreads)
-if(Threads_FOUND)
-  link_libraries(${CMAKE_THREAD_LIBS_INIT})
-endif()
 add_library(mir STATIC)
 target_sources(mir PRIVATE mir/mir.c mir/mir-gen.c mir/c2mir/c2mir.c)
-target_include_directories(mir PUBLIC mir)
+target_include_directories(mir PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/mir)
+
+include(FindThreads)
 if(Threads_FOUND)
+  target_link_libraries(mir PUBLIC ${CMAKE_THREAD_LIBS_INIT})
   target_compile_definitions(mir PUBLIC "MIR_PARALLEL_GEN")
 endif()
+
 if(NOT WIN32)
   target_compile_options(mir PRIVATE
     $<$<CONFIG:RELEASE>:-O3>
@@ -70,14 +70,14 @@ if(NOT WIN32)
   target_compile_options(mir PRIVATE -std=gnu11 -Wno-abi -fsigned-char -fPIC)
 endif()
 
-include(CheckCCompilerFlag)
-if(CMAKE_COMPILER_IS_GNUCC)
-  check_c_compiler_flag(-fno-tree-sra NO_TREE_SRA)
-  if (NO_TREE_SRA)
-    target_compile_options(mir PRIVATE -fno-tree-sra)
-  endif()
-  check_c_compiler_flag(-fno-ipa-cp-clone NO_IPA_CP_CLONE)
-  if (NO_IPA_CP_CLONE)
-    target_compile_options(mir PRIVATE -fno-ipa-cp-clone)
-  endif()
-endif()
+#include(CheckCCompilerFlag)
+#if(CMAKE_COMPILER_IS_GNUCC)
+#  check_c_compiler_flag(-fno-tree-sra NO_TREE_SRA)
+#  if (NO_TREE_SRA)
+#    target_compile_options(mir PRIVATE -fno-tree-sra)
+#  endif()
+#  check_c_compiler_flag(-fno-ipa-cp-clone NO_IPA_CP_CLONE)
+#  if (NO_IPA_CP_CLONE)
+#    target_compile_options(mir PRIVATE -fno-ipa-cp-clone)
+#  endif()
+#endif()
